--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,8 +4,8 @@ pattern.daily=.yyyy-MM-dd
 pattern.hourly=.yyyy-MM-dd.HH
 
 #### Log Level and active logs DESENVOLVIMENTO###
-log4j.rootLogger=INFO,busca
-log4j.category.busca=INFO
+log4j.rootLogger=ERROR,busca
+log4j.category.busca=ERROR
 
 #### Output Appender ###
 log4j.appender.busca=org.apache.log4j.ConsoleAppender
